# dvgrab

./: CMakeLists.txt
include/: config.h  dvgrab.h  error.h  filehandler.h  frame.h  v4l2reader.h
samples/: CMakeLists.txt  dv_client.cpp  main.cc
src/: avi.cc  dvgrab.cc  error.cc  filehandler.cc  ieee1394io.cc  riff.cc  smiltime.cc  srt.cc  stringutils.cc
test/: grab_30_frames.sh
